--- a/src/pug/_template/_base.pug
+++ b/src/pug/_template/_base.pug
@@ -48,7 +48,9 @@ html(lang="ja", xmlns:og="http://ogp.me/ns#")
     meta(property="og:url", content="")
     title= title
   body(class=bodyClasses)
+    include ../_include/header
     main
       h1 HELLO WORLD
       block main
+    include ../_include/footer
     block scripts
