ヘッダースタイル中

--- a/src/sass/_include/color.scss
+++ b/src/sass/_include/color.scss
@@ -1,2 +1,10 @@
-$white-pure: #ffffff;
-$black-pure: #000000;
+:root {
+  --color-white: #fcfbf8;
+  --color-black: #212121;
+  --color-gray: #5e5c63;
+  --color-gold: #b59c75;
+  --color-blue: #3ea8df;
+  --color-green: #b2dfd7;
+  --color-pink: #f5cad1;
+  --color-hr: #d9d9d9;
+}
