--- a/src/pug/_include/header.pug
+++ b/src/pug/_include/header.pug
@@ -4,4 +4,15 @@ header.global-header
     .hamburger
       span
       span
-      span.text menu
+      p.active menu
+      p.nav close
+  nav
+    .inner
+      a(href="#") Top
+      a(href="#") Works
+      a(href="#") About me
+    .icons
+      a.github
+        include ../../assets/img/svg/icon-github.svg
+      a.x
+        include ../../assets/img/svg/icon-x.svg
