--- a/src/sass/_include/path.scss
+++ b/src/sass/_include/path.scss
@@ -1,12 +1,12 @@
 $path-to-img: "../images/";
 
-@mixin bg-lg($name, $bg-size: contain) {
-  background-image: url("../images/lg/#{$name}");
+@mixin bg-img($name, $bg-size: contain) {
+  background-image: url("#{$path-to-img}#{$name}");
   background-repeat: no-repeat;
   background-size: $bg-size;
 }
 @mixin bg-sm($name, $bg-size: contain) {
-  background-image: url("../images/sm/#{$name}");
+  background-image: url("../images/#{$name}");
   background-repeat: no-repeat;
   background-size: $bg-size;
 }
