--- a/src/sass/main/header.scss
+++ b/src/sass/main/header.scss
@@ -12,5 +12,125 @@
 .global-header {
   width: 100%;
   height: 100px;
-  background-color: var(--color-gold);
+
+  .bar {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1440px - 80px;
+    padding-inline: 40px;
+    margin: 0 auto;
+
+    .logo {
+      position: fixed;
+      top: 25px;
+      left: 40px;
+      width: 44px;
+      height: 44px;
+
+      @include path.bg-img("svg/logo.svg");
+    }
+
+    .hamburger {
+      position: fixed;
+      top: 25px;
+      right: 40px;
+      z-index: 3;
+      width: 50px;
+      height: 50px;
+      font-size: 20px;
+      color: var(--color-gold);
+
+      @include typography.zen-bold;
+
+      p {
+        position: absolute;
+        bottom: 0;
+        opacity: 0;
+        transition: 0.3s ease-in-out;
+
+        &.active {
+          opacity: 1;
+        }
+      }
+
+      span {
+        position: absolute;
+        top: 10px;
+        display: inline-block;
+        width: 50px;
+        height: 3px;
+        background-color: var(--color-gold);
+        transition: 0.3s ease-in-out;
+
+        &:first-of-type {
+          transform: translateY(6px) translateY(-50%);
+        }
+
+        &:last-of-type {
+          transform: translateY(-4px) translateY(-50%);
+        }
+      }
+
+      &.active {
+        span {
+          transform-origin: 50% 50%;
+
+          &:first-child {
+            transform: rotate(15deg);
+          }
+
+          &:last-of-type {
+            transform: rotate(-15deg);
+          }
+        }
+      }
+    }
+  }
+
+  nav {
+    position: fixed;
+    right: 0;
+    z-index: 2;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 480px;
+    height: 100vh;
+    padding: 120px 40px;
+    background-color: var(--color-white);
+    border-left: 1px solid var(--color-gold);
+    transform: translateX(100%);
+
+    .inner {
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+      font-size: 45px;
+
+      @include typography.en-regular;
+
+      a {
+        display: block;
+        color: var(--color-black);
+        text-decoration: none;
+      }
+    }
+
+    .icons {
+      display: flex;
+      gap: 30px;
+
+      .github {
+        width: 50px;
+        height: 50px;
+      }
+
+      .x {
+        width: 50px;
+        height: 50px;
+      }
+    }
+  }
 }
