introduction スタイル中

--- a/src/pug/top/introduction.pug
+++ b/src/pug/top/introduction.pug
@@ -3,12 +3,14 @@ section.introduction
     .head
       h2 Design <br>A Journey into Adventure
       p デザインは冒険の世界
-    p.text 私はWebデザインを学んでいるうちに、デザインはまるで冒険のようだと感じました。
-      br
-      | 次々と移り変わるトレンドを攻略しながら、グラフィック、イラスト、ディレクション、コーディングなど、多彩なスキルを身につけてレベルアップしていきます。課題を解決して困っている人を助けるたびに達成感を味わい、時には一人では乗り越えられない大きなプロジェクトにも、チームと力を合わせて挑むことができます。
-      br
-      | そして、そのすべてが何よりワクワクする体験として自分自身を成長させてくれるのです。
+    .text
+      p.ja 私はWebデザインを学んでいるうちに、デザインはまるで冒険のようだと感じました。
+        br
+        | 次々と移り変わるトレンドを攻略しながら、グラフィック、イラスト、ディレクション、コーディングなど、多彩なスキルを身につけてレベルアップしていきます。課題を解決して困っている人を助けるたびに達成感を味わい、時には一人では乗り越えられない大きなプロジェクトにも、チームと力を合わせて挑むことができます。
+        br
+        | そして、そのすべてが何よりワクワクする体験として自分自身を成長させてくれるのです。
+      p.en Design is like an adventure. Every time you solve a challenge and help someone in need, you gain skills, grow, and create a brighter future—not just for yourself, but for others too.
     .bg
       figure.bg-1
-      figure.bg-2
-      figure.bg-3
+      //- figure.bg-2
+      //- figure.bg-3
