--- a/src/sass/_include/typography.scss
+++ b/src/sass/_include/typography.scss
@@ -4,6 +4,7 @@ $-font-en: "Hina Mincho", serif;
 @mixin zen-regular() {
   font-family: $-font-ja-zen;
   font-weight: 400;
+  letter-spacing: 0;
 }
 @mixin zen-bold() {
   font-family: $-font-ja-zen;
