works pc スタイル中

--- a/src/pug/top/works.pug
+++ b/src/pug/top/works.pug
@@ -2,41 +2,47 @@ section.works
   .head
     h2 Works
     p 完成したクエスト報酬
-  .item
-    .img
-      figure.img-works.works-1
-      figure.bg
-    .text
-      span website | クライアントワーク
-      h3 餃子スタンド 公式サイト
-      p 千葉県稲毛駅にある、日本酒と創作餃子が楽しめる居酒屋「稲毛餃子スタンド」様の架空公式サイトを制作しました。
-  .item
-    .img
-      figure.img-works.works-2
-      figure.bg
-    .text
-      span website | クライアントワーク
-      h3 くろやぎ様<br>ポートフォリオサイト
-      p フリーランスイラストレーター、くろやぎ様のポートフォリオサイトを制作しました。
-  ul
-    li.item
-      span website | 自主制作
+  .content
+    a.item(href="#")
       .img
-        figure.img-works.works-3
-        figure.bg
-      h3 高津由輝 ポートフォリオサイト
-    li.item
-      span website | スクール課題
+        figure.img-works.works-1
+        figure.works-bg
+
+      .text
+        span website | クライアントワーク
+        h3 餃子スタンド 公式サイト
+        p 千葉県稲毛駅にある、日本酒と創作餃子が楽しめる居酒屋「稲毛餃子スタンド」様の架空公式サイトを制作しました。
+    a.item(href="#")
       .img
-        figure.img-works.works-4
-        figure.bg
-      h3 野菜直送サービス LP
-    li.item
-      span website | 自主制作
-      .img
-        figure.img-works.works-5
-        figure.bg
-      h3 テレビ局 リクルートサイト
-  a.btn-more
-    include ../../assets/img/svg/logo.svg
-    span MORE
+        figure.img-works.works-2
+        figure.works-bg
+
+      .text
+        span website | クライアントワーク
+        h3 くろやぎ様<br>ポートフォリオサイト
+        p フリーランスイラストレーター、くろやぎ様のポートフォリオサイトを制作しました。
+    ul
+      li
+        a.item-min(href="#")
+          span website | 自主制作
+          .img
+            figure.img-works.works-3
+            figure.works-bg
+          h3 高津由輝 ポートフォリオサイト
+      li
+        a.item-min(href="#")
+          span website | スクール課題
+          .img
+            figure.img-works.works-4
+            figure.works-bg
+          h3 野菜直送サービス LP
+      li
+        a.item-min(href="#")
+          span website | 自主制作
+          .img
+            figure.img-works.works-5
+            figure.works-bg
+          h3 テレビ局 リクルートサイト
+    a.btn-more(href="#")
+      include ../../assets/img/svg/logo.svg
+      span MORE
