--- a/src/sass/main/header.scss
+++ b/src/sass/main/header.scss
@@ -13,39 +13,64 @@
   width: 100%;
   height: 100px;
 
+  @include mq.sm {
+    height: 62px;
+  }
+
   .bar {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 1440px - 80px;
-    padding-inline: 40px;
-    margin: 0 auto;
+    // box-sizing: border-box;
+    // display: flex;
+    // justify-content: space-between;
+    // width: 100%;
+    // max-width: 1440px - 80px;
+    // height: 100%;
+    // padding-inline: 40px;
+    // margin: 0 auto;
 
     .logo {
       position: fixed;
       top: 25px;
       left: 40px;
+      z-index: 100;
       width: 44px;
       height: 44px;
 
       @include path.bg-img("svg/logo.svg");
+      @include mq.sm {
+        top: 16px;
+        left: 24px;
+        width: 30px;
+        height: 30px;
+      }
     }
 
     .hamburger {
       position: fixed;
       top: 25px;
       right: 40px;
-      z-index: 3;
+      z-index: 100;
       width: 50px;
-      height: 50px;
+      height: 44px;
       font-size: 20px;
       color: var(--color-gold);
 
       @include typography.zen-bold;
+      @include mq.sm {
+        top: 16px;
+        right: 24px;
+        width: 40px;
+        height: 30px;
+        font-size: 12px;
+        line-height: 1;
+      }
 
       p {
         position: absolute;
         bottom: 0;
+        display: block;
+        width: 100%;
+        text-align: center;
+        letter-spacing: 0;
         opacity: 0;
         transition: 0.3s ease-in-out;
 
@@ -58,17 +83,17 @@
         position: absolute;
         top: 10px;
         display: inline-block;
-        width: 50px;
+        width: 100%;
         height: 3px;
         background-color: var(--color-gold);
         transition: 0.3s ease-in-out;
 
         &:first-of-type {
-          transform: translateY(6px) translateY(-50%);
+          transform: translateY(2px) translateY(-50%);
         }
 
         &:last-of-type {
-          transform: translateY(-4px) translateY(-50%);
+          transform: translateY(-8px) translateY(-50%);
         }
       }
 
