--- a/src/sass/top/works.scss
+++ b/src/sass/top/works.scss
@@ -12,6 +12,10 @@
 .works {
   margin: 100px 108px;
 
+  @include mq.sm {
+    margin: 60px 24px;
+  }
+
   .head {
     display: flex;
     flex-direction: column;
@@ -20,16 +24,30 @@
     margin: 0 auto 80px;
     color: var(--color-black);
 
+    @include mq.sm {
+      gap: 5px;
+      margin-bottom: 40px;
+    }
+
     h2 {
       @include typography.en-regular;
       margin-left: -8px;
       font-size: 100px;
       line-height: 1;
+
+      @include mq.sm {
+        margin-left: -5px;
+        font-size: 45px;
+      }
     }
 
     p {
       @include typography.zen-regular;
       font-size: 20px;
+
+      @include mq.sm {
+        font-size: 12px;
+      }
     }
   }
 
@@ -37,8 +55,16 @@
     .item:nth-child(2) {
       flex-direction: row-reverse;
 
+      @include mq.sm {
+        flex-direction: column;
+      }
+
       .text {
         padding: 0 0 0 7%;
+
+        @include mq.sm {
+          padding: 0;
+        }
       }
     }
 
@@ -71,8 +97,18 @@
       margin: 0 auto 80px;
       text-decoration: none;
 
+      @include mq.sm {
+        flex-direction: column;
+        gap: 20px;
+        margin-bottom: 40px;
+      }
+
       &:hover .img-works {
         transform: translate(-15px, -15px);
+
+        @include mq.sm {
+          transform: translate(-10px, -10px);
+        }
       }
 
       .img {
@@ -80,6 +116,10 @@
         display: block;
         width: 49%;
         aspect-ratio: 5 / 3;
+
+        @include mq.sm {
+          width: 100%;
+        }
 
         .works-1 {
           @include path.bg-img("works/img-works-1.jpg", cover);
@@ -101,6 +141,12 @@
         padding-right: 7%;
         color: var(--color-black);
 
+        @include mq.sm {
+          gap: 10px;
+          width: 100%;
+          padding: 0;
+        }
+
         span {
           display: block;
           font-size: 12px;
@@ -108,11 +154,19 @@
 
         h3 {
           font-size: 20px;
+
+          @include mq.sm {
+            font-size: 16px;
+          }
         }
 
         p {
           font-size: 16px;
           line-height: 1.8;
+
+          @include mq.sm {
+            font-size: 13px;
+          }
         }
       }
     }
@@ -124,8 +178,19 @@
       max-width: 1224px;
       margin: 0 auto 80px;
 
+      @include mq.sm {
+        flex-direction: column;
+        gap: 40px;
+        width: 85%;
+        margin: 0 auto 40px 0;
+      }
+
       li {
         width: 31%;
+
+        @include mq.sm {
+          width: 100%;
+        }
 
         .item-min {
           display: block;
@@ -136,15 +201,25 @@
           color: var(--color-black);
           text-decoration: none;
 
+          @include mq.sm {
+            gap: 10px;
+            align-items: flex-start;
+          }
+
           &:hover .img-works {
             transform: translate(-10px, -10px);
           }
 
           span {
             font-size: 12px;
+
+            @include mq.sm {
+              order: 1;
+            }
           }
 
           h3 {
+            order: 2;
             font-size: 16px;
             font-weight: 400;
           }
