--- a/src/pug/top.pug
+++ b/src/pug/top.pug
@@ -9,6 +9,11 @@ block links
 block main
   include top/about-me
   include top/fv
-  include top/gallery
   include top/introduction
   include top/works
+  include top/gallery
+
+block scripts
+  script(src=`${pathToJS}main.js`)
+  script(src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js")
+  script(src=`${pathToJS}top.js`)
