--- a/src/pug/top/fv.pug
+++ b/src/pug/top/fv.pug
@@ -1,9 +1,15 @@
 section.fv
   .inner
+    .bg
+      .left
+        figure.bg1
+        figure.bg2
+      .right.no-sm
+        figure.bg3
+        figure.bg4
     .content
       .head
-        h1 Welcome to<br> My portfolio site
-
+        h1 Welcome to<br class="no-md"> My portfolio site
         p Takatsu Yuki portfolio site
       .character
         .circle
