--- a/src/pug/top/about-me.pug
+++ b/src/pug/top/about-me.pug
@@ -4,54 +4,64 @@ section.about-me
       h2 About me
       p 私について
     .content
-      .left
-        figure.bg
-        figure.chara
-        h3 Takatsu<br>Yuki
+      figure.bg
+      .name
+        .h3
+          span T
+          span akatsu
+          br
+          span Y
+          span uki
         p 高津 由輝
         .icon
-          figure.git-hub
-          figure.x
-      .right
-        h3 ツール使用歴
-        p （直近１年間のツール使用期間）
-        .tool
+          a(href="#")
+            include ../../assets/img/svg/icon-github.svg
+          a(href="#")
+            include ../../assets/img/svg/icon-x.svg
+      .line
+        .left
+          figure.character
+        .right
+          h3 ツール使用歴
+          p （直近１年間のツール使用期間）
           .hr
-          .item
-            figure.item1
-            .status
-              .text
-                p Figma
-                span 10ヶ月
-              .bar
-          .item
-            figure.item2
-            .status
-              .text
-                p Photoshop
-                span 5ヶ月
-              .bar
-          .item
-            figure.item3
-            .status
-              .text
-                p Illustrator
-                span 2ヶ月
-              .bar
-          .item
-            figure.item4
-            .status
-              .text
-                p Visual Studio Code
-                span 10ヶ月
-              .bar
-        .skill
-          .hr
-          .icons
-            figure 
-            figure 
-            figure 
-          p 1995年生まれの千葉県出身。<br>趣味でイラストを描いていたことをきっかけにweb制作に興味を持ち、2023年の11月からスクールでデザインとコーディングのスキルを習得しました。<br>現在、Webデザイナーとしての転職を目指し、新しいチャレンジに向けて活動中です。
-          a.btn-more(href="#")
-            include ../../assets/img/svg/logo.svg
-            span MORE
+          .tool
+            .item
+              figure.item1
+              .status
+                .text
+                  p Figma
+                  span 10ヶ月
+                .bar
+            .item
+              figure.item2
+              .status
+                .text
+                  p Photoshop
+                  span 5ヶ月
+                .bar
+            .item
+              figure.item3
+              .status
+                .text
+                  p Illustrator
+                  span 2ヶ月
+                .bar
+            .item
+              figure.item4
+              .status
+                .text
+                  p Visual Studio Code
+                  span 10ヶ月
+                .bar
+          .skill
+            h3 スキル
+            .hr
+            .icons
+              figure.item1
+              figure.item2
+              figure.item3
+            p 1995年生まれの千葉県出身。<br>趣味でイラストを描いていたことをきっかけにweb制作に興味を持ち、2023年の11月からスクールでデザインとコーディングのスキルを習得しました。<br>現在、Webデザイナーとしての転職を目指し、新しいチャレンジに向けて活動中です。
+            a.btn-more(href="#")
+              include ../../assets/img/svg/logo.svg
+              span MORE
