--- a/src/sass/_include/media_query.scss
+++ b/src/sass/_include/media_query.scss
@@ -19,6 +19,12 @@ $-responsive-threshold2: 1200px;
   }
 }
 
+@mixin md-sm {
+  @media screen and (max-width: #{$-responsive-threshold2}) {
+    @content;
+  }
+}
+
 @mixin sm {
   @media screen and (max-width: #{$-responsive-threshold1}) {
     @content;
