--- a/src/sass/top/about-me.scss
+++ b/src/sass/top/about-me.scss
@@ -13,6 +13,14 @@
   .inner {
     margin-bottom: 200px;
 
+    @include mq.md {
+      padding-inline: 108px;
+    }
+    @include mq.sm {
+      padding-inline: 24px;
+      margin-bottom: 60px;
+    }
+
     .head {
       display: flex;
       flex-direction: column;
@@ -22,19 +30,34 @@
       color: var(--color-black);
       text-align: center;
 
+      @include mq.sm {
+        gap: 5px;
+        align-items: flex-start;
+        margin-bottom: 0;
+      }
+
       h2 {
         @include typography.en-regular;
         font-size: 92px;
         line-height: 1;
+
+        @include mq.sm {
+          font-size: 45px;
+        }
       }
 
       p {
         @include typography.zen-regular;
         font-size: 16px;
+
+        @include mq.sm {
+          font-size: 12px;
+        }
       }
     }
 
     .content {
+      position: relative;
       display: flex;
       width: calc(100% - 108px);
       margin-left: auto;
@@ -42,8 +65,360 @@
       border-right: none;
       border-radius: 90px 0 0;
 
-      .left {
+      @include mq.md-sm {
+        width: 100%;
+        border: none;
+        border-radius: 0;
+      }
+
+      .bg {
+        @include path.bg-img("works/img-works-bg.jpg", cover);
+        position: absolute;
+        top: 50%;
+        left: -108px;
+        z-index: 1;
+        width: 60%;
+        max-width: 780px;
+        height: 484px;
+        background-position: center;
+        transform: translateY(-50%);
+
+        @include mq.md {
+          top: 685px;
+          width: calc(100% + 108px);
+          max-width: none;
+          transform: translateY(-100%);
+        }
+        @include mq.sm {
+          top: 280px;
+          left: -24px;
+          width: calc(100% + 24px);
+          max-width: none;
+          height: 230px;
+          transform: translateY(-100%);
+        }
+      }
+
+      .name {
+        position: absolute;
+        top: 50%;
+        left: -108px;
+        z-index: 5;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        padding: 45px 100px 45px 108px;
+        color: var(--color-white);
+        transform: translateY(-50%);
+
+        @include mq.md {
+          top: 685px;
+          transform: translateY(-100%);
+        }
+        @include mq.sm {
+          top: 280px;
+          left: -24px;
+          gap: 10px;
+          padding: 28px 100px 28px 24px;
+          transform: translateY(-100%);
+        }
+
+        .h3 {
+          @include typography.en-regular;
+          position: relative;
+          z-index: 5;
+          margin-left: -2px;
+          font-size: 140px;
+          line-height: 1;
+
+          @include mq.sm {
+            margin-left: 0;
+            font-size: 50px;
+          }
+
+          span {
+            display: inline-block;
+
+            &:nth-of-type(2) {
+              margin-left: -8px;
+
+              @include mq.sm {
+                margin-left: -4px;
+              }
+            }
+
+            &:nth-of-type(4) {
+              margin-left: -15px;
+
+              @include mq.sm {
+                margin-left: -8px;
+              }
+            }
+          }
+        }
+
+        p {
+          @include typography.zen-regular;
+          font-size: 16px;
+
+          @include mq.sm {
+            font-size: 12px;
+          }
+        }
+
+        .icon {
+          display: flex;
+          gap: 30px;
+
+          @include mq.sm {
+            gap: 10px;
+          }
+
+          svg {
+            width: 50px;
+            height: 50px;
+
+            @include mq.sm {
+              width: 30px;
+              height: 30px;
+            }
+
+            path {
+              fill: var(--color-white);
+            }
+          }
+        }
+      }
+
+      .line {
         position: relative;
+        display: flex;
+        width: 100%;
+        height: 100%;
+        margin: 10px 0 10px 10px;
+        overflow: hidden;
+        border: solid 1px var(--color-gold);
+        border-right: none;
+        border-radius: 80px 0 0;
+
+        @include mq.md-sm {
+          flex-direction: column;
+          margin: 0;
+          overflow: unset;
+          border: none;
+          border-radius: none;
+        }
+
+        .left {
+          position: relative;
+          display: flex;
+          align-items: center;
+          width: 55%;
+          max-width: 744px;
+          margin-left: 12%;
+
+          @include mq.md-sm {
+            box-sizing: border-box;
+            justify-content: flex-end;
+            width: 100%;
+            max-width: none;
+            margin-left: 0;
+            overflow: hidden;
+          }
+
+          .character {
+            @include path.bg-img("top/img-aboutme-character.png", cover);
+            position: relative;
+            z-index: 2;
+            box-sizing: border-box;
+            width: 100%;
+            min-width: 456px;
+            max-width: 700px;
+            height: 100%;
+            max-height: 890px;
+            background-position: 50% -10%;
+
+            @include mq.md {
+              max-width: none;
+              height: 685px;
+              margin-left: 21%;
+              background-position: 50% 0%;
+            }
+            @include mq.sm {
+              min-width: 300px;
+              height: 280px;
+              margin: 0 -21% 0 0;
+              background-position: 50% 0%;
+            }
+          }
+        }
+
+        .right {
+          @include typography.zen-regular;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          width: min(560px, 60%);
+          padding: 40px 108px 40px 0;
+
+          @include mq.md-sm {
+            width: 100%;
+            padding-inline: 0;
+          }
+
+          h3 {
+            margin-bottom: 5px;
+            font-size: 26px;
+            font-weight: 200;
+            color: var(--color-gold);
+
+            @include mq.sm {
+              font-size: 16px;
+            }
+          }
+
+          & > p {
+            margin-bottom: 10px;
+            font-size: 12px;
+            color: var(--color-gold);
+          }
+
+          .tool {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            align-items: center;
+            justify-content: center;
+            width: fit-content;
+            margin: 25px 0;
+
+            .item {
+              display: flex;
+              gap: 15px;
+              align-items: flex-end;
+              justify-content: center;
+              width: clamp(300px, 100%, 370px);
+
+              figure {
+                flex-shrink: 0;
+                width: 45px;
+                height: 45px;
+              }
+
+              .item1 {
+                @include path.bg-img("svg/icon-figma.svg");
+              }
+
+              .item2 {
+                @include path.bg-img("svg/icon-photoshop.svg");
+              }
+
+              .item3 {
+                @include path.bg-img("svg/icon-illustrator.svg");
+              }
+
+              .item4 {
+                @include path.bg-img("svg/icon-vscode.svg");
+              }
+
+              .status {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                justify-content: center;
+                width: 100%;
+                max-width: 305px;
+
+                .text {
+                  display: flex;
+                  justify-content: space-between;
+                  font-size: 16px;
+                  color: #8f8e8d;
+
+                  @include mq.sm {
+                    font-size: 13px;
+                  }
+                }
+
+                .bar {
+                  position: relative;
+                  height: 10px;
+                  background-color: var(--color-hr);
+                  border-radius: 100px;
+
+                  &::before {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 0%;
+                    height: 100%;
+                    content: "";
+                    background-color: var(--color-gold);
+                    border-radius: 100px;
+                  }
+                }
+              }
+            }
+          }
+
+          .skill {
+            display: flex;
+            flex-direction: column;
+
+            h3 {
+              text-align: center;
+            }
+
+            .icons {
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              width: 100%;
+              max-width: 380px;
+              padding: 25px 0;
+              margin: 0 auto;
+
+              figure {
+                width: 26%;
+                max-width: 100px;
+                aspect-ratio: 1 / 1;
+              }
+
+              .item1 {
+                @include path.bg-img("common/img-skills-1.png");
+              }
+
+              .item2 {
+                @include path.bg-img("common/img-skills-2.png");
+              }
+
+              .item3 {
+                @include path.bg-img("common/img-skills-3.png");
+              }
+            }
+
+            & > p {
+              padding: 20px 0;
+              line-height: 2;
+              border-top: solid 1px var(--color-hr);
+
+              @include mq.sm {
+                margin-bottom: 10px;
+                font-size: 13px;
+              }
+            }
+
+            .btn-more {
+              margin: 0 0 0 auto;
+              transform: translateX(-20px);
+
+              @include mq.sm {
+                margin: 0 auto;
+                transform: translateX(0);
+              }
+            }
+          }
+        }
       }
     }
   }
