--- a/src/sass/top/fv.scss
+++ b/src/sass/top/fv.scss
@@ -13,6 +13,15 @@
   width: 100%;
   height: vw.lg(830);
 
+  @include mq.make-switching-class;
+  @include mq.md {
+    height: vw.md(960);
+  }
+  @include mq.sm {
+    height: vw.sm(543);
+    margin-bottom: 60px;
+  }
+
   .inner {
     position: relative;
     box-sizing: border-box;
@@ -22,7 +31,96 @@
     margin-inline: auto;
     background-position: center 5vh;
 
-    @include path.bg-img("top/img-fv-bg.png");
+    @include mq.md {
+      width: vw.md(984);
+    }
+    @include mq.sm {
+      width: 100%;
+      height: vw.sm(382);
+    }
+
+    .bg {
+      position: absolute;
+      top: vw.lg(30);
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      max-width: 100%;
+
+      @include mq.md {
+        top: vw.md(160);
+      }
+      @include mq.sm {
+        top: 0;
+        flex-shrink: 0;
+        justify-content: center;
+        height: vw.sm(382);
+      }
+
+      .left {
+        display: flex;
+        gap: vw.lg(50);
+
+        @include mq.sm {
+          gap: vw.sm(30);
+          justify-content: center;
+          width: 100%;
+        }
+      }
+
+      .right {
+        display: flex;
+        gap: vw.lg(50);
+      }
+
+      .bg1 {
+        @include path.bg-img("top/img-fv-bg-1.png");
+        width: vw.lg(165);
+        aspect-ratio: 33 / 113;
+
+        @include mq.md {
+          width: vw.md(165);
+        }
+        @include mq.sm {
+          width: vw.sm(129);
+          background-size: cover;
+        }
+      }
+
+      .bg2 {
+        @include path.bg-img("top/img-fv-bg-2.png");
+        width: vw.lg(165);
+        aspect-ratio: 33 / 113;
+
+        @include mq.md {
+          width: vw.md(165);
+        }
+        @include mq.sm {
+          width: vw.sm(129);
+          background-size: cover;
+        }
+      }
+
+      .bg3 {
+        @include path.bg-img("top/img-fv-bg-3.png");
+        width: vw.lg(165);
+        aspect-ratio: 33 / 113;
+
+        @include mq.md {
+          width: vw.md(165);
+        }
+      }
+
+      .bg4 {
+        @include path.bg-img("top/img-fv-bg-4.png");
+        width: vw.lg(165);
+        aspect-ratio: 33 / 113;
+
+        @include mq.md {
+          width: vw.md(165);
+        }
+      }
+    }
 
     .content {
       position: absolute;
@@ -31,42 +129,98 @@
       width: vw.lg(1200);
       max-width: 1500px;
 
+      @include mq.md {
+        display: block;
+        flex-direction: column;
+        gap: vw.md(10);
+      }
+      @include mq.sm {
+        flex-direction: column;
+        width: 100%;
+        max-width: none;
+      }
+
       .head {
+        @include typography.en-regular;
         position: absolute;
-        top: 19%;
+        top: 21%;
         left: 0;
         color: var(--color-gold);
 
-        @include typography.en-regular;
+        @include mq.md {
+          position: static;
+          font-size: vw.md(90);
+        }
+        @include mq.sm {
+          position: static;
+          order: 1;
+          font-size: vw.sm(50);
+          text-align: center;
+        }
 
         h1 {
-          margin-bottom: 20px;
+          margin-bottom: vw.lg(20);
           font-size: vw.lg(90);
           font-weight: 400;
           line-height: 1;
+
+          @include mq.md {
+            margin-bottom: vw.md(10);
+            font-size: vw.md(90);
+            letter-spacing: 0;
+          }
+          @include mq.sm {
+            font-size: vw.sm(50);
+          }
         }
 
         p {
           font-size: vw.lg(22);
+
+          @include mq.md {
+            font-size: vw.md(22);
+          }
+          @include mq.sm {
+            font-size: vw.sm(22);
+          }
         }
       }
 
       .character {
-        @include path.bg-img("top/img-.character.png");
+        @include path.bg-img("top/img-character.png");
         position: relative;
         flex-shrink: 0;
         max-width: 1170px;
         height: vw.lg(774);
         aspect-ratio: 893/774;
-        transform: rotate(5deg);
+
+        @include mq.md {
+          height: vw.md(860);
+          margin-top: vw.md(41);
+        }
+        @include mq.sm {
+          max-width: none;
+          height: vw.sm(382);
+          background-position: 35% 0%;
+          background-size: 198%;
+        }
 
         .circle {
           position: absolute;
-          top: 0;
+          top: -3%;
           left: 21%;
           height: vw.lg(190);
           aspect-ratio: 1 / 1;
           transition: 1s ease-in-out;
+
+          @include mq.md {
+            height: vw.md(205);
+          }
+          @include mq.sm {
+            top: -2%;
+            left: 9%;
+            height: vw.sm(141);
+          }
 
           &:hover {
             transform: rotate(60deg);
