ステータスバーのアニメーション実装

--- a/src/pug/top/about-me.pug
+++ b/src/pug/top/about-me.pug
@@ -1,4 +1,4 @@
-section.about-me
+section#about-me.about-me
   .inner
     .head
       h2 About me
@@ -31,29 +31,33 @@ section.about-me
               .status
                 .text
                   p Figma
-                  span 10ヶ月
+                  span.month(date-month="10") ヶ月
                 .bar
+                  .fill
             .item
               figure.item2
               .status
                 .text
                   p Photoshop
-                  span 5ヶ月
+                  span.month(date-month="5") ヶ月
                 .bar
+                  .fill
             .item
               figure.item3
               .status
                 .text
                   p Illustrator
-                  span 2ヶ月
+                  span.month(date-month="2") ヶ月
                 .bar
+                  .fill
             .item
               figure.item4
               .status
                 .text
                   p Visual Studio Code
-                  span 10ヶ月
+                  span.month(date-month="10") ヶ月
                 .bar
+                  .fill
           .skill
             h3 スキル
             .hr
