--- a/src/sass/top/about-me.scss
+++ b/src/sass/top/about-me.scss
@@ -346,7 +346,7 @@
                   background-color: var(--color-hr);
                   border-radius: 100px;
 
-                  &::before {
+                  .fill {
                     position: absolute;
                     top: 0;
                     left: 0;
@@ -355,6 +355,7 @@
                     content: "";
                     background-color: var(--color-gold);
                     border-radius: 100px;
+                    transition: 1.5s ease;
                   }
                 }
               }
