--- a/src/pug/top/gallery.pug
+++ b/src/pug/top/gallery.pug
@@ -1,7 +1,7 @@
 section.gallery
   h2 Illustration
   #gallery-items.items
-    .item1.rellax(data-rellax-speed="3")
+    .item1.rellax(data-rellax-speed="3")(data-rellax-xs-speed="2")
       figure.img1
     .item2.rellax(data-rellax-speed="0")
       figure.img2
