--- a/src/pug/_include/footer.pug
+++ b/src/pug/_include/footer.pug
@@ -1,4 +1,22 @@
 footer.global-footer
   .inner
+    p 新たな冒険を共にする準備をする
+    a(href="#")
+      include ../../assets/img/svg/icon-mail.svg
+      h2 Contact
+    .pc-content
+      nav
+        ul
+          li
+            a(href="#") Top
+          li
+            a(href="#") Works
+          li
+            a(href="#") About me
+      .sp-content
+        p.copyrigft @2025 Takatsu Yuki portofolio site
+        .icons
+          include ../../assets/img/svg/icon-github.svg
+          include ../../assets/img/svg/icon-x.svg
     .bg
       include ../../assets/img/svg/deco-footer-bg.svg
