footer スタイル中

--- a/src/pug/_include/footer.pug
+++ b/src/pug/_include/footer.pug
@@ -1,7 +1,9 @@
 footer.global-footer
+  .bg
+    include ../../assets/img/svg/deco-footer-bg.svg
   .inner
     p 新たな冒険を共にする準備をする
-    a(href="#")
+    a.contact(href="#")
       include ../../assets/img/svg/icon-mail.svg
       h2 Contact
     .pc-content
@@ -16,7 +18,7 @@ footer.global-footer
       .sp-content
         p.copyrigft @2025 Takatsu Yuki portofolio site
         .icons
-          include ../../assets/img/svg/icon-github.svg
-          include ../../assets/img/svg/icon-x.svg
-    .bg
-      include ../../assets/img/svg/deco-footer-bg.svg
+          a(href="#")
+            include ../../assets/img/svg/icon-github.svg
+          a(href="#")
+            include ../../assets/img/svg/icon-x.svg
